<resources>
    <string name="app_name">AndroidToolsLibrary</string>

    <string name="logout">Press again to exit the program.</string>
    <string name="submit">Submit</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <!--DateUtils-->
    <string name="message_text_just_now">Just Now</string>
    <plurals name="message_text_minutes_ago">
        <item quantity="zero">%d minutes ago</item>
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="message_text_hours_ago">
        <item quantity="zero">%d hours ago</item>
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="message_text_days_ago">
        <item quantity="zero">%d days ago</item>
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="message_text_months_ago">
        <item quantity="zero">%d months ago</item>
        <item quantity="one">%d month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>

    <!--PTLog-->
    <string name="btn_close">Close</string>
    <string name="btn_trace">Trace</string>
    <string name="btn_begin">Begin</string>
    <string name="btn_end">End</string>
    <string name="btn_count">Count</string>
    <string name="btn_delete">Delete</string>
    <string name="log_level_dialog_title">Please select the log level</string>
    <string name="log_count_dialog_title">Please select the log count</string>
    <string name="log_delete_dialog_title">Please select the delete time</string>
    <string name="delete_toast_text">%d data were deleted.</string>
    <string name="title">Please select time</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="hour">Hours</string>
    <string name="minute">Minutes</string>
    <string name="select_date">Select Date</string>
    <string name="current_date">Current date </string>
    <string name="select_time">Select time</string>
    <string name="current_time">Present time</string>

    <!--gender-->
    <string name="man">Male</string>
    <string name="woman">Female</string>


</resources>
